--- a/index.html
+++ b/index.html
@@ -89,7 +89,31 @@
 <p>Hieu met Rohit at a shuttle stop in the visitors parking lot at Rice University in Houston, TX. They had both driven several hours from other cities (Hieu from Austin, Rohit from Arlington), and arrived on campus around 7pm to attend HackRice 2016. Both were completely lost, but managed to find their way to the hackathon with the help of three friendly Rice students. There, they shared a table together, discussing potential project ideas. Intuitive Machines was one of the hackathon's sponsors offering a special prize for working with their data set. With no other exciting prospective projects in mind, we went to work.</p>
 
 <h2>
+<a id="setup-and-deployment" class="anchor" href="#setup-and-deployment" aria-hidden="true"><span class="octicon octicon-link"></span></a>Setup and Deployment</h2>
+
+<h3>
+<a id="tools-needed" class="anchor" href="#tools-needed" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tools needed</h3>
+
+<ul>
+<li>NodeJS and npm</li>
+<li>Stellarium</li>
+</ul>
+
+<h3>
+<a id="deployment-instructions" class="anchor" href="#deployment-instructions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Deployment Instructions</h3>
+
+<ul>
+<li>Create your own Google Maps Geolocation API key. Remove contents of API_KEY.TXT and paste your Google Maps Geolocation API key there. </li>
+<li>Launch the server process on the server machine:
+export GEO_API_KEY=$(cat API_KEY.TXT); nodejs server.js</li>
+<li>Open a web browser on any machine that can access the server and open the URL:
+http://server-ip:8080</li>
+</ul>
+
+<h2>
 <a id="fin" class="anchor" href="#fin" aria-hidden="true"><span class="octicon octicon-link"></span></a>Fin.</h2>
+
+<h1></h1>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/cheehieu/spacecraft-spotter">Spacecraft-spotter</a> is maintained by <a href="https://github.com/cheehieu">cheehieu</a>.</span>
